--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
         <meta name="theme-color" content="#000000" />
         <meta name="description" content="Web site created using create-react-app" />
 
+        <link rel="shortcut icon" href="./Images/favicon.png" type="image/x-icon" />
+
         <!-- 1) Font Open Sans -->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -21,7 +23,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet" />
         <!-- Fonts Ends ----------- -->
-        <title>Molik's Portfolio</title>
+        <title>Molik Singla</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
