--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
-        <meta name="description" content="Web site created using create-react-app" />
+        <meta name="description" content="A complete portfolio site create using ReactJs and TailwindCss." />
 
         <link rel="shortcut icon" href="./Images/favicon.png" type="image/x-icon" />
 
