--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
         <meta name="theme-color" content="#000000" />
         <meta name="description" content="A complete portfolio site create using ReactJs and TailwindCss." />
 
+        <meta name="google-site-verification" content="tHZGf_8KvqeDcox5DS6aAL_ZPHTtCN1bTLMD4NYwHxo" />
+
         <link rel="shortcut icon" href="./Images/favicon.png" type="image/x-icon" />
 
         <!-- 1) Font Open Sans -->
